Get input of "tip"
Still try to get Input of tip field

--- a/DieWebseite.html
+++ b/DieWebseite.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" type="text/css" media="screen" href="DasAussehen.css">
 </head>
 <body>
-    
+
+    <form id="Formal">
+        <input id="derName" type="text" name="Name">
+        <input id="dasAlter" type="number" name="Alter">
+        <input type="button" value="Gib ab" onclick="getEingabem()">
+    </form>
+
 </body>
     <script src="DieFunktion.js"></script>
 </html>
